--- a/identity-api/values.yaml
+++ b/identity-api/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: docker.io/klarasmartai/identity-api:dev
+  repository: docker.io/klarasmartai/identity-api
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "dev"
